--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img src="images/joinus.jpg" alt="">
     </div>
     <div class="">
-      <h1>Who we are...</h1>
+      <h1 class="title">Who we are...</h1>
       <p class="content">EarlyBird Internships is a venture that aims to empower students early in their lives. We help capable high school students find internships with small businesses and ventures run by students. We seek to build connections
         between students
         and help them build a reliable network for later. </p>
@@ -64,7 +64,7 @@
       <img src="images/find-internships.jpg" alt="">
     </div>
     <div class="">
-      <h1>What we do...</h1>
+      <h1 class="title">What we do...</h1>
       <p class="content">We work with schools in order to find students who are interested in interning and help them craft resumes to send to organisations that work in their respective interest areas. </p>
     </div>
   </div>
@@ -73,7 +73,7 @@
       <img src="images/login.jpg" alt="">
     </div>
     <div class="">
-      <h1>How Can We Help You? </h1>
+      <h1 class="title">How Can We Help You? </h1>
       <p class="content">If you, as a student or small business owner, are looking for volunteers, interns, or extra hands for help, please fill out the google form linked below and we will get back to you at the earliest. </p>
     </div>
   </div>
